# dockerhub_test

./: .env  docker-compose.yml  dockerfile  pyproject.toml  tox.ini
.github/workflows/: check_build.yml
tests/: test_horse.py
