[tool.poetry]
name = "dockerhub-test"
version = "0.1.0"
description = ""
authors = ["MartinRovang <martinrovang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
numpy = "^1.24.2"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
